apps/rsshub/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    volsync.backube/privileged-movers: "true"
  name: rsshub
