apps/rsshub/deploy-browserless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    app.kubernetes.io/part-of: rsshub
    io.kompose.service: browserless
  name: browserless
  namespace: rsshub
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: browserless
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
        kubectl.kubernetes.io/restartedAt: "2023-09-27T10:09:42+08:00"
      creationTimestamp: null
      labels:
        io.kompose.service: browserless
    spec:
      containers:
        # TODO: change to lightpanda
        - image: browserless/chrome
          imagePullPolicy: Always
          name: browserless
          ports:
            - containerPort: 3000
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            requests:
              memory: 123Mi
            limits:
              memory: 123Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
