apps/rsshub/deploy-database-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: database-postgres
  name: database-postgres
  namespace: rsshub
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: database-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: database-postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
          image: postgres:13-alpine
          imagePullPolicy: IfNotPresent
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database-postgres-claim0
          resources:
            requests:
              cpu: 37m
              memory: 153Mi
            limits:
              memory: 256Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
        - name: database-postgres-claim0
          persistentVolumeClaim:
            claimName: database-postgres-claim0
