apps/rsshub/deploy-service-mercury.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: service-mercury
  name: service-mercury
  namespace: rsshub
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: service-mercury
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
        kompose.version: 1.26.1 (a9d05d509)
        kubectl.kubernetes.io/restartedAt: "2023-09-27T10:09:42+08:00"
      creationTimestamp: null
      labels:
        io.kompose.service: service-mercury
    spec:
      containers:
        - image: wangqiru/mercury-parser-api:latest
          imagePullPolicy: Always
          name: mercury
          ports:
            - containerPort: 3000
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            requests:
              cpu: 1m
              memory: 100Mi
            limits:
              memory: 150Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
