apps/rsshub/deploy-service-opencc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: service-opencc
  name: service-opencc
  namespace: rsshub
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: service-opencc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
        kompose.version: 1.26.1 (a9d05d509)
        kubectl.kubernetes.io/restartedAt: "2023-09-27T10:09:42+08:00"
      creationTimestamp: null
      labels:
        io.kompose.service: service-opencc
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: wangqiru/opencc-api-server:latest
          imagePullPolicy: Always
          name: opencc
          ports:
            - containerPort: 3000
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
