apps/rsshub/service-browserless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    app.kubernetes.io/part-of: rsshub
    io.kompose.service: browserless
  name: browserless
  namespace: rsshub
spec:
  ports:
    - name: "3000"
      port: 3000
  selector:
    io.kompose.service: browserless
