apps/rsshub/service-database-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: database-postgres
  name: database-postgres
  namespace: rsshub
spec:
  ports:
    - name: "5432"
      port: 5432
  selector:
    io.kompose.service: database-postgres
