apps/rsshub/service-external-rsshub.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: rss.west-beta.ts.net
    tailscale.com/proxy-group: egress-proxies
  name: egress-rss
  namespace: rsshub
spec:
  externalName: unused
  type: ExternalName
