apps/rsshub/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    app.kubernetes.io/part-of: rsshub
    io.kompose.service: redis
  name: redis
  namespace: rsshub
spec:
  ports:
    - name: "6379"
      port: 6379
  selector:
    io.kompose.service: redis
