apps/rsshub/service-rsshub.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    app.kubernetes.io/part-of: rsshub
    io.kompose.service: rsshub
  name: rsshub
  namespace: rsshub
spec:
  ports:
    - name: "1200"
      port: 1200
  selector:
    io.kompose.service: rsshub
