apps/rsshub/service-service-opencc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: service-opencc
  name: service-opencc
  namespace: rsshub
spec:
  ports:
    - name: "3000"
      port: 3000
  selector:
    io.kompose.service: service-opencc
