apps/rsshub/service-service-rss.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ttrss/ --pvc-request-size 2Gi
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: service-rss
  name: service-rss
  namespace: rsshub
spec:
  ports:
    - name: "80"
      port: 80
  selector:
    io.kompose.service: service-rss
