apps/rsshub/ingress-rsshub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
  name: rsshub
  namespace: rsshub
spec:
  ingressClassName: tailscale
  rules:
    - host: rss.west-beta.ts.net
      http:
        paths:
          - backend:
              service:
                name: rsshub
                port:
                  number: 1200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - rss.west-beta.ts.net
